# SmartMessenger

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.migrations  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/: database.py  databases.py
src/api/: exception_handlers.py  main.py
src/api/AI/: openAI.py
src/api/v1/: dependencies.py  handlers.py  main.py  routers.py
src/api/v1/websocket/: handlers.py
src/apps/ai/: dependencies.py  exceptions.py  prompts.py  routers.py  schemas.py  services.py
src/apps/chats/: converters.py  db.py  dependencies.py  entities.py  exceptions.py  models.py  routers.py  schemas.py
src/apps/chats/converters/: chats.py
src/apps/chats/repositories/: __init__.py  base.py  mongodb.py
src/apps/chats/schemas/: chats.py
src/apps/chats/services/: __init__.py  base.py  chats.py
src/apps/chats/websocket/: connections.py  routers.py  schemas.py
src/apps/friends/: models.py  routers.py  schemas.py
src/apps/posts/: dependencies.py  models.py  schemas.py
src/apps/posts/routers/: comments.py  posts.py
src/apps/users/: dependencies.py  models.py  routers.py  schemas.py  security.py  utils.py
src/apps/users/models/: __init__.py  (+1 more)
src/migrations/: env.py
src/migrations/versions/: 55658ff525e7_.py  5b87ee475952_initial.py  884676ac0481_.py
src/settings/: config.py
suggestions/: code_quality_implementation_guide.md  improvement_plan.md  performance_implementation_guide.md  security_implementation_guide.md  summary.md  user_experience_implementation_guide.md
(+4 files in other folders)
