[project]
name = "SmartMessenger"
version = "0.1.0"
description = "ELEKS internship project"
requires-python = ">=3.13,<4.0"
dependencies = [
    "beanie>=1.29.0",
    "fastapi>=0.115.12",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
]
